move more stuff in CertManager

--- a/tests/data/askAuthorizationScope.html
+++ b/tests/data/askAuthorizationScope.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
 
-        <a class="header" href="welcome"><h1>IndieCert</h1></a>
+        <a class="header" href="."><h1>IndieCert</h1></a>
 
         <p>
             A website wants to verify your identity!
@@ -30,7 +30,11 @@
         </form>
 
         <div class="footer">
-    IndieCert | <a href="faq">FAQ</a> | <a href="https://github.com/fkooman/indiecert">Source</a>
+    <span class="pull-left">IndieCert</span>
+    <span class="pull-right">
+                    https://me.example/ | <a href="indieauth/logout">Logout</a> |
+                <a href="faq">FAQ</a>
+    </span>
 </div>
     </div> <!-- /container -->
 </body>
