remove all the footer fiddle stuff

--- a/tests/data/askAuthorization.html
+++ b/tests/data/askAuthorization.html
@@ -29,11 +29,9 @@
         </form>
 
         <div class="footer">
-    <span class="pull-left">IndieCert</span>
-    <span class="pull-right">
-                    https://me.example/ | <a href="indieauth/logout">Logout</a> |
-                <a href="faq">FAQ</a>
-    </span>
+    IndieCert |
+    <a href="faq">FAQ</a> |
+    <a href="https://github.com/fkooman/indiecert/">Code</a>
 </div>
     </div> <!-- /container -->
 </body>
