fix unit tests, update CHANGES file

--- a/tests/data/askAuthorizationScope.html
+++ b/tests/data/askAuthorizationScope.html
@@ -23,10 +23,10 @@
                             <tr><th>Scope</th><td><code>post</code></td></tr>
                     </table>
 
-        <form method="post" action="confirm?client_id=https://www.client.example/client/&amp;redirect_uri=https://www.client.example/client/callback&amp;me=https://me.example/&amp;scope=post&amp;state=12345">
+        <form class="askConfirmation" method="post" action="confirm?client_id=https://www.client.example/client/&amp;redirect_uri=https://www.client.example/client/callback&amp;me=https://me.example/&amp;scope=post&amp;state=12345">
             <input type="checkbox" id="remember" name="remember" />
             <label class="remember" for="remember">Remember for 1 week</label>
-            <input type="submit" value="Approve">
+            <input class="info" type="submit" value="Approve">
         </form>
 
         <div class="footer">
