--- a/tests/data/askAuthorization.html
+++ b/tests/data/askAuthorization.html
@@ -22,10 +22,10 @@
             <tr><th>Your Identity</th><td><code>https://me.example/</code></td></tr>
                     </table>
 
-        <form method="post" action="confirm?client_id=https://www.client.example/client/&amp;redirect_uri=https://www.client.example/client/callback&amp;me=https://me.example/&amp;state=12345">
+        <form class="askConfirmation" method="post" action="confirm?client_id=https://www.client.example/client/&amp;redirect_uri=https://www.client.example/client/callback&amp;me=https://me.example/&amp;state=12345">
             <input type="checkbox" id="remember" name="remember" />
             <label class="remember" for="remember">Remember for 1 week</label>
-            <input type="submit" value="Approve">
+            <input class="info" type="submit" value="Approve">
         </form>
 
         <div class="footer">
